2006-12-15 Markus Schaber <schabi@logix-tt.com>
        * trunk/java/jdbc/Makefile
          Fixed Makefile for jts tests, commented debug options better
          
        * trunk/java/jdbc/jtssrc/org/postgis/jts/JtsBinaryWriter.java 
          Fix multi-dimension handling in JtsBinaryWriter, thanks to 
          Thomas Marti for the hints

2006-12-15 Eduin Carrillo <yecarrillo@yahoo.com>

	* lwgeom/lwgeom_transform.c:
	  short circuit when source and target SRID are the same.

2006-12-15 Eduin Carrillo <yecarrillo@yahoo.com>

	* lwgeom/: Makefile, lwgeom_kml.c, lwpostgis.sql.in:
	  New AsKML() function
	* doc/postgis.xml: document new AsKML function.


2006-12-13 Markus Schaber <schabi@logix-tt.com>

	* README.postgis
          Fixed "hard upgrade" instructions.

---------  PostGIS-1.2.0 release [2006-12-08] --------------------------

2006-12-05 Mark Leslie <mleslie@refractions.net>

	* doc/postgis.xml:
	  Added sections for the SQL-MM and ArcSDE function ports.

2006-12-05 Kevin Neufeld <kneufeld@refractions.net>

	* Added sqlmm.sql.in: ESRI's ArcSDE subset of SQL/MM functions
	* Moved common sql defines to their own header file.

2006-12-01 Mark Leslie <mleslie@refractions.net>

	* lwgeom/lwcompound.c, lwgeom/lwcurve.c, lwgeom/lwmsurface.c,
	  lwgeom/lwmcurve.c, lwgeom/lwcurvepoly.c:
	  Added serialize/deserialize support for curved geometries.
	* lwgeom/liblwgeom.h:
	  Added typedefs and minimum function prototypes for curved
	  geometries.
	* lwgeom/lwgeom_sqlmm.c:
	  Functions to determine curve centers for use in creating bounding
	  boxs.
	* lwgeom/wktunparse.c, lwgeom/lwgparse.c, lwgeom/wktparse.h, 
	  lwgeom/wktparse.lex, lwgeom/wktparse.y:
	  Minimum parsing/printing support and struct allocations.
  	* lwgeom/liblwgeom.c, lwgeom/lwgeom_api.c, lwgeom/lwgeom.c:
	  Included curved types in various switches in generic functions.
	* lwgeom/lwgeom_functions_analytic.c:
	  Added point-in-polygon function
	* lwgeom/lwgeom_geos_c.c: